--- a/crash.html
+++ b/crash.html
@@ -17,6 +17,7 @@
 		<link href = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.9.0/theme/mdn-like.min.css" type='text/css' rel="stylesheet">
 		<link href = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css" type="text/css" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 		<style>
 		.bin {
@@ -64,12 +65,11 @@
 				font-size: 16px;
 			}
 			.container {
-				background-color: #f6f7fc;
 				height:auto;
 			}
 			.jumbotron {
 				margin-top:20px;
-				background-color: #6ad;
+				background-color: inherit;
 				padding-left: 30px;
 				padding-right:30px;
 				margin-left:auto;
@@ -103,6 +103,50 @@
 			.header {
 				margin-top:-120px;
 			}
+			.btn-outline {
+    background-color: transparent;
+    color: inherit;
+    transition: all .5s;
+}
+
+.btn-primary.btn-outline {
+    color: #428bca;
+}
+
+.btn-success.btn-outline {
+    color: #5cb85c;
+}
+
+.btn-info.btn-outline {
+    color: #5bc0de;
+}
+
+.btn-warning.btn-outline {
+    color: #f0ad4e;
+}
+
+.btn-danger.btn-outline {
+    color: #d9534f;
+}
+
+.btn-primary.btn-outline:hover,
+.btn-success.btn-outline:hover,
+.btn-info.btn-outline:hover,
+.btn-warning.btn-outline:hover,
+.btn-danger.btn-outline:hover {
+    color: #fff;
+}
+.grey-back {
+	background-color: #e7e7e7;
+	padding: 10px;
+	width:auto;
+	text-align: center;
+}
+.btn {
+	border-radius: 0px;
+	border-width: 3px;
+	font-weight:bold;
+}
 		</style>
 	</head>
 	<body id="top">
@@ -133,22 +177,24 @@
 			<div class="header container jumbotron content-b">
 				<span class="codefont">
 				<p class="bin"><p>
-				<h1 class="title">codeslam's</h1>
-				<h2>Computer Science Crash Course</h2>
+				<h1 id="title" class="title text-center">code-slam</h1>
+				<h2 class="text-center">Computer Science Crash Course</h2>
 				</span>
-				<h2><em>an introduction to Computer Science in 2 months</em></h2>
+				<h4 class="text-center"><em>an introduction to Computer Science in 2 months</em></h4>
+				<br>
 				<h4 class="topics codefont">topics = ["Computational thinking",
 					"Problem solving", "Programming languages", "Data structures", "Data manipulation", "Conditionals", "Control flow", "Functions", "Symbolic representation", "Memory", "Algorithms", "Computational cost"]</h4>
 
 				<p>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</p>
-				<ul>
-					<li><b>First meeting</b>: January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.</li>
-					<li>Weekly recurring meetings will continue until February 25, day/time to be determined.</li>
-					<li>Total cost of attendance is $200, due at the end of the first meeting if you are interested!</li>
-				</ul>
-				<br>
-				<a class="btn btn-lg btn-warning" href="#event" role="button">Learn More</a>
-				<a class="btn btn-lg btn-success" href="#signup" role="button">Sign up!</a>
+				<div class="row grey-back">
+					<div class="col-md-4"><h3>First meeting</h3>January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.</div>
+					<div class="col-md-4"><h3>Weekly recurring meetings</h3> Thursdays at 5pm until February 25.</div>
+					<div class="col-md-4"><h3>Total cost</h3> Attendance is $200, you will be sent an email after the first meeting if you are interested.</div>
+				</div>
+				<div class="row grey-back">
+					<a class="btn btn-lg btn-outline btn-warning" href="#event" role="button">Learn More</a>
+					<a class="btn btn-lg btn-outline btn-success" href="#signup" role="button">Sign up!</a>
+				</div>
 			</div>
 		</div>
 
@@ -196,53 +242,55 @@ Object.keys(event).forEach(function(k){
 		</div>
 
 		<div class="section" id="how">
-			<h2>How it Works</h2>
-			<div class="row">
-				<div class="col-md-3">
-					<h3>MATERIALS</h3>
-					<p>are provided by:</p>
-					<ul>
-						<li>Udacity's <a href="https://www.udacity.com/course/intro-to-computer-science--cs101" target="_blank">Intro to Computer Science</a> course*.  The materials are designed for 3 months @ 6 hours/week.  With the help of codeslam, you will complete these materials in 2 months, and learn more in the process.</p>
-						<li>codeslam free course materials and tools</li>
-						<li>other free materials on the internet</li>
-					</ul>
-					<p class="small">*This course is not affiliated with Udacity.  This course is not selling Udacity course materials.  Materials are Creative Commons licensed and free to you.</p>
-				</div>
-				<div class="col-md-3">
-					<h3>YOU</h3>
-					<p>already know that computer science is important in today's world and want to learn it.</p>
-					<p>You will need to watch online videos and complete online quizzes prior to class meetings.</p>
-					<p>You will need to bring a laptop with a web browser installed to class.</p>
-				</div>
-				<div class="col-md-3">
-					<h3>CLASS</h3>
-					<p>meetings occur weekly for 2-4 hours.  Class will include:
+			<div class="container">
+				<h2>How it Works</h2>
+				<div class="row">
+					<div class="col-md-3">
+						<h3>MATERIALS</h3>
+						<p>are provided by:</p>
 						<ul>
-							<li>reviewing materials</li>
-							<li>extra lectures</li>
-							<li>group activities</li>
-							<li>completing problem sets</li>
+							<li>Udacity's <a href="https://www.udacity.com/course/intro-to-computer-science--cs101" target="_blank">Intro to Computer Science</a> course*.  The materials are designed for 3 months @ 6 hours/week.  With the help of codeslam, you will complete these materials in 2 months, and learn more in the process.</p>
+							<li>codeslam free course materials and tools</li>
+							<li>other free materials on the internet</li>
 						</ul>
-						Class size is limited to 10 students committed to the coursework.</p>
-				</div>
-				<div class="col-md-3">
-					<h3>GEO</h3>
-					<p><a href="#instructor">the instructor</a> will:
-						<ul>
-							<li>lecture on current and related topics</li>
-							<li>provide a schedule for course checkpoints</li>
-							<li>assist in completing problem sets</li>
-							<li>offer personal mentorship</li>
-							<li>hold office hours by appointment</li>
-						</ul>
-						I will get you through this course!</p>
+						<p class="small">*This course is not affiliated with Udacity.  This course is not selling Udacity course materials.  Materials are Creative Commons licensed and free to you.</p>
+					</div>
+					<div class="col-md-3">
+						<h3>YOU</h3>
+						<p>already know that computer science is important in today's world and want to learn it.</p>
+						<p>You will need to watch online videos and complete online quizzes prior to class meetings.</p>
+						<p>You will need to bring a laptop with a web browser installed to class.</p>
+					</div>
+					<div class="col-md-3">
+						<h3>CLASS</h3>
+						<p>meetings occur weekly for 2-4 hours.  Class will include:
+							<ul>
+								<li>reviewing materials</li>
+								<li>extra lectures</li>
+								<li>group activities</li>
+								<li>completing problem sets</li>
+							</ul>
+							Class size is limited to 10 students committed to the coursework.</p>
+					</div>
+					<div class="col-md-3">
+						<h3>GEO</h3>
+						<p><a href="#instructor">the instructor</a> will:
+							<ul>
+								<li>lecture on current and related topics</li>
+								<li>provide a schedule for course checkpoints</li>
+								<li>assist in completing problem sets</li>
+								<li>offer personal mentorship</li>
+								<li>hold office hours by appointment</li>
+							</ul>
+							I will get you through this course!</p>
+					</div>
 				</div>
 			</div>
 		</div>
 
 		<div class="" id="instructor">
 			<div class="jumbotron container yellow">
-				<img class="img-circle pull-right" src="geom.jpg" width="255px">
+				<img class="img-circle pull-right" src="geom.jpg" width="150px">
 				<h1>Geo Miller</h1>
 				<p>is the founder of <a href="http://codeslam.io">codeslam</a> - exploring the <a href="https://medium.com/@storesyntax/we-don-t-know-what-it-means-to-learn-to-code-da5dad1c3742#.7ov5hgw7e">art of code</a>.  He is currently serving as a technical advisor to <a href="https://www.lobbyq.com/">LobbyQ</a> and an open source contributor to <a href="http://blockbuilder.org/">Building Blocks</a>, <a href="http://tributary.io">Tributary</a>, and <a href="http://enjalot.github.io/Inlet/">Inlet</a>.</p>
 				<p>Formerly, Geo was the Assistant Director of the Program in Interdisciplinary Computing at Florida State University in Tallahassee, Florida.  He completed a Masters' in Scientific Computing and Bachelor of Science in Computer Science both at Florida State University.
@@ -251,10 +299,15 @@ Object.keys(event).forEach(function(k){
 		</div>
 
 		<div class="section" id="signup">
-			<div class="row">
-				<div class="col-md-12">
-					<h3>We are currently determining our weekly meeting time.  Sign up if you are interested in taking this course, and I will attempt to find a time that will work for the most people!</h3>
-					<iframe src="https://docs.google.com/forms/d/1hpilpWokH6waDCIO5QclVD7EkenP25yRR4X50_mup2o/viewform?embedded=true" width="95%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			<div class="container jumbotron">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Get ready to go!</h1>
+						<p>Fill out the following Google Form to sign up for the first class meeting on January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.  Email geo@codeslam.io if you have any questions.</p>
+						<p class="text-center">
+							<a class="btn btn-success btn-outline fa fa-external-link btn-lg" href="https://docs.google.com/forms/d/1hpilpWokH6waDCIO5QclVD7EkenP25yRR4X50_mup2o/viewform?usp=send_form">  Sign Up!</a>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -308,29 +361,51 @@ Object.keys(event).forEach(function(k){
 		    }
 		  })
 		})
-
-		$(document).ready(function(){
-			d3.select('.bin').style({'background-color':'#000'}).transition().duration(4000)
-			.ease("bounce").style({'background-color':'#6ad'})
-
-		  generateBinary();
-			setInterval('generateBinary()', 500);
-		});
-
-		function generateBinary(){
+		var generateBinary = function(){
 		  str = "";
 		  for ( var i = 0; i < 2000; i++ ) {
 		    str = str + Math.round(Math.random());
 		  }
 		  $(".bin").html(str);
 		}
+		$(document).ready(function(){
+			d3.select('.bin').style({'background-color':'#000'}).transition().duration(4000)
+			.ease("bounce").style({'background-color':'#6ad'})
 
-		function updateBinary() {
-		  str = $(".bin").html();
-		  n = str.length;
-		  r = Math.floor(Math.random() * n + 1)
-		  $(".bin").html(str.substring(0, r) + Math.round(Math.random()) + str.substring(r + 1));
-		}
+		  generateBinary();
+			setInterval(generateBinary, 500);
+
+			var textToBin = function(text){
+			  var data = text.split('')
+			      output = [];
+			  data.forEach(function(e){
+			    var bin = e.charCodeAt().toString(2);
+			    output.push(Array(8-bin.length+1).join("0") + bin);
+			  })
+			  return output.join(" ");
+			}
+			var binToChar = function(bin) {
+				return String.fromCharCode(parseInt(bin,2))
+			}
+
+			var title = document.getElementById('title')
+			var octals = textToBin(title.textContent).split(' ')
+			title.textContent = ""
+			octals.forEach(function(d,i) {
+				var span = document.createElement("span")
+				var t = title.appendChild(span)
+				t.textContent = d+' '
+				setTimeout(function() {
+					$(t).fadeOut(500+i*100, function() {
+						$(this).text(binToChar(d))
+						$(this).fadeIn('fast')
+					})
+				}, 1000)
+			})
+
+
+		});
+
 
 	</script>
 	</body>
