--- a/crash.html
+++ b/crash.html
@@ -181,15 +181,14 @@
 				<h2 class="text-center">Computer Science Crash Course</h2>
 				</span>
 				<h4 class="text-center"><em>an introduction to Computer Science in 2 months</em></h4>
-				<br>
 				<h4 class="topics codefont">topics = ["Computational thinking",
 					"Problem solving", "Programming languages", "Data structures", "Data manipulation", "Conditionals", "Control flow", "Functions", "Symbolic representation", "Memory", "Algorithms", "Computational cost"]</h4>
 
-				<p>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</p>
 				<div class="row grey-back">
-					<div class="col-md-4"><h3>First meeting</h3>January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.</div>
-					<div class="col-md-4"><h3>Weekly recurring meetings</h3> Thursdays at 5pm until February 25.</div>
-					<div class="col-md-4"><h3>Total cost</h3> Attendance is $200, you will be sent an email after the first meeting if you are interested.</div>
+					<div class="col-md-3"><h3>Who?</h3>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</div>
+					<div class="col-md-3"><h3>First meeting</h3>January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.</div>
+					<div class="col-md-3"><h3>Weekly recurring meetings</h3> Thursdays at 5pm<br>January 7 through February 25.</div>
+					<div class="col-md-3"><h3>Total cost</h3> Attendance is $200, you will be sent an email after the first meeting if you are interested.</div>
 				</div>
 				<div class="row grey-back">
 					<a class="btn btn-lg btn-outline btn-warning" href="#event" role="button">Learn More</a>
