--- a/crash.html
+++ b/crash.html
@@ -204,7 +204,7 @@
 				</div>
 			</div>
 			<div class="row">
-			<div class="col-md-8 codefont">
+			<div class="col-md-8 codefont" style="margin-bottom: 1em;">
 				<button class="btn btn-lg runit">event-details.js</button>
 <textarea id="code">
 event = {}
