--- a/crash.html
+++ b/crash.html
@@ -12,6 +12,7 @@
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/7.1.1/js/smooth-scroll.min.js"></script>
 
 		<link href = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.9.0/codemirror.min.css" type='text/css' rel="stylesheet">
 		<link href = "https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.9.0/theme/mdn-like.min.css" type='text/css' rel="stylesheet">
@@ -159,14 +160,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#top">Crash Course</a>
+          <a class="navbar-brand" data-scroll href="#top">Crash Course</a>
         </div>
 				<div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-						<li><a href="#event">Event Details</a></li>
-						<li><a href="#how">How it Works</a></li>
-						<li><a href="#instructor">About the Instructor</a></li>
-						<li><a href="#signup">Sign Up</a></li>
+						<li><a data-scroll href="#event">Event Details</a></li>
+						<li><a data-scroll href="#how">How it Works</a></li>
+						<li><a data-scroll href="#instructor">About the Instructor</a></li>
+						<li><a data-scroll href="#signup">Sign Up</a></li>
           </ul>
         </div>
       </div>
@@ -191,8 +192,8 @@
 					<div class="col-md-3"><h3>Total cost</h3> Attendance is $200, you will be sent an email after the first meeting if you are interested.</div>
 				</div>
 				<div class="row grey-back">
-					<a class="btn btn-lg btn-outline btn-warning" href="#event" role="button">Learn More</a>
-					<a class="btn btn-lg btn-outline btn-success" href="#signup" role="button">Sign up!</a>
+					<a data-scroll class="btn btn-lg btn-outline btn-warning" href="#event" role="button">Learn More</a>
+					<a data-scroll class="btn btn-lg btn-outline btn-success" href="#signup" role="button">Sign up!</a>
 				</div>
 			</div>
 		</div>
@@ -273,7 +274,7 @@ Object.keys(event).forEach(function(k){
 					</div>
 					<div class="col-md-3">
 						<h3>GEO</h3>
-						<p><a href="#instructor">the instructor</a> will:
+						<p><a data-scroll href="#instructor">the instructor</a> will:
 							<ul>
 								<li>lecture on current and related topics</li>
 								<li>provide a schedule for course checkpoints</li>
@@ -313,6 +314,9 @@ Object.keys(event).forEach(function(k){
 
 	<script type='text/javascript'>
 		console.log("Hello world.")
+
+		smoothScroll.init();
+
 		var code = document.getElementById('code')
 		var editor = CodeMirror.fromTextArea(code, {
 			mode: "text/javascript",
