--- a/crash.html
+++ b/crash.html
@@ -213,7 +213,7 @@ event.title = 'codeslam CS Crash Course'
 event.location = 'Domi Station'
 event.start = new Date('January 7, 2016')
 event.end = new Date('February 25, 2016')
-event.meetingTime = null // To be determined
+event.meetingTime = '5pm'
 event.instructor = 'Geo Miller'
 event.cost = 200.00
 event.duration = event.end-event.start
