--- a/crash.html
+++ b/crash.html
@@ -211,7 +211,7 @@
 event = {}
 event.title = 'codeslam CS Crash Course'
 event.location = 'Domi Station'
-event.firstMeeting = new Date('January 7, 2016 5pm EST')
+event.firstMeeting = new Date('January 7, 2016 17:00:00 GMT-0500')
 event.start = new Date('January 12, 2016')
 event.end = new Date('February 23, 2016')
 event.recurringMeeting = 'Tuesdays, 5pm'
