--- a/crash.html
+++ b/crash.html
@@ -186,7 +186,7 @@
 					"Problem solving", "Programming languages", "Data structures", "Data manipulation", "Conditionals", "Control flow", "Functions", "Symbolic representation", "Memory", "Algorithms", "Computational cost"]</h4>
 
 				<div class="row grey-back">
-					<div class="col-md-3"><h3>Who?</h3>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</div>
+					<div class="col-md-3"><h3>Who is this for?</h3>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</div>
 					<div class="col-md-3"><h3>First meeting</h3>Thursday, January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.</div>
 					<div class="col-md-3"><h3>Weekly recurring meetings</h3> Tuesdays at 5pm<br>January 12 through February 23.</div>
 					<div class="col-md-3"><h3>Total cost</h3> Attendance is $200, you will be sent an email after the first meeting if you are interested.</div>
@@ -306,7 +306,7 @@ Object.keys(event).forEach(function(k){
 						<h1>Get ready to go!</h1>
 						<p>Fill out the following Google Form to sign up for the first class meeting on Thursday, January 7, 2016 at 5pm in the Florida Blue Room at Domi Station.  Email geo@codeslam.io if you have any questions.</p>
 						<p class="text-center">
-							<a class="btn btn-success btn-outline fa fa-external-link btn-lg" href="https://docs.google.com/forms/d/1hpilpWokH6waDCIO5QclVD7EkenP25yRR4X50_mup2o/viewform?usp=send_form">  Sign Up!</a>
+							<a class="btn btn-success btn-outline btn-lg" href="https://docs.google.com/forms/d/1hpilpWokH6waDCIO5QclVD7EkenP25yRR4X50_mup2o/viewform?usp=send_form">Sign Up! <span class="fa fa-external-link"></span></a>
 						</p>
 					</div>
 				</div>
