--- a/crash.html
+++ b/crash.html
@@ -187,7 +187,7 @@
 
 				<div class="row grey-back">
 					<div class="col-md-3"><h3>Who is this for?</h3>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</div>
-					<div class="col-md-3"><h3>First meeting</h3>Thursday, January 7, 2016 at 5pm at <a href="http://www.domistation.com/">Domi Station</a>.</div>
+					<div class="col-md-3"><h3>First meeting</h3>Thursday, January 7, 2016 5pm at <a href="http://www.domistation.com/">Domi Station</a>.</div>
 					<div class="col-md-3"><h3>Weekly recurring meetings</h3> Tuesdays at 5pm<br>January 12 through February 23.</div>
 					<div class="col-md-3"><h3>Total cost</h3> Attendance is $200, you will be sent an email after the first meeting if you are interested.</div>
 				</div>
