--- a/crash.html
+++ b/crash.html
@@ -189,10 +189,10 @@
 					<div class="col-md-3"><h3>Who is this for?</h3>If you do not know what the topics above are (or have a hard time reading it), and you are ready to learn a lot in a short time, this class is for you!</div>
 					<div class="col-md-3"><h3>First meeting</h3>Thursday, January 7, 2016 5pm at <a href="http://www.domistation.com/">Domi Station</a>.</div>
 					<div class="col-md-3"><h3>Weekly recurring meetings</h3> Tuesdays at 5pm<br>January 12 through February 23.</div>
-					<div class="col-md-3"><h3>Total cost</h3> Weekly meeting attendance is $200.  Sign up and come to the first meeting to decide if you want to attend!</div>
+					<div class="col-md-3"><h3>Total cost</h3> Course attendance is $200.  Sign up and come to the first meeting to decide if you want to attend!</div>
 				</div>
 				<div class="row grey-back">
-					<a data-scroll class="btn btn-lg btn-outline btn-warning" href="#event" role="button">Learn More</a>
+					<a data-scroll class="btn btn-lg btn-outline btn-warning" href="#event" role="button">Event Details</a>
 					<a data-scroll class="btn btn-lg btn-outline btn-warning" href="#how" role="button">How it Works</a>
 					<a data-scroll class="btn btn-lg btn-outline btn-success" href="#signup" role="button">Sign up!</a>
 				</div>
