--- a/crash.html
+++ b/crash.html
@@ -251,11 +251,10 @@ Object.keys(event).forEach(function(k){
 						<h3>MATERIALS</h3>
 						<p>are provided by:</p>
 						<ul>
-							<li>Udacity's <a href="https://www.udacity.com/course/intro-to-computer-science--cs101" target="_blank">Intro to Computer Science</a> course*.  The materials are designed for 3 months @ 6 hours/week.  With the help of codeslam, you will complete these materials in 2 months, and learn more in the process.</p>
 							<li>codeslam free course materials and tools</li>
-							<li>other free materials on the internet</li>
+							<li>*other freely accessible materials on the internet</li>
 						</ul>
-						<p class="small">*This course is not affiliated with Udacity.  This course is not selling Udacity course materials.  Materials are Creative Commons licensed and free to you.</p>
+						<p class="small">*codeslam is not affiliated with any content licensed by external sources.</p>
 					</div>
 					<div class="col-md-3">
 						<h3>YOU</h3>
