--- a/crash.html
+++ b/crash.html
@@ -252,7 +252,7 @@ Object.keys(event).forEach(function(k){
 						<p>are provided by:</p>
 						<ul>
 							<li>codeslam free course materials and tools</li>
-							<li>*other freely accessible materials on the internet</li>
+							<li>other freely accessible materials on the internet*</li>
 						</ul>
 						<p class="small">*this course is not affiliated with any content licensed by external sources.</p>
 					</div>
