--- a/crash.html
+++ b/crash.html
@@ -306,7 +306,7 @@ Object.keys(event).forEach(function(k){
 						<h1>Get ready to go!</h1>
 						<p>Fill out the following Google Form to sign up for the first class meeting on Thursday, January 7, 2016 5pm at Domi Station.</p>
 						<p><strong>Limited Seating:</strong> Seats will be filled by those who sign up first.  Seats are limited to 10 people, first come first serve.  If you attend the first meeting without signing up, there may not be a seat for you.</p>
-						<p>Email geo@codeslam.io if you have any questions.</p>
+						<p>Email geo@codeslam.io or tweet <a href="https://twitter.com/storesyntax">@storesyntax</a> if you have any questions.</p>
 						<p class="text-center">
 							<a class="btn btn-success btn-outline btn-lg" href="https://docs.google.com/forms/d/1hpilpWokH6waDCIO5QclVD7EkenP25yRR4X50_mup2o/viewform?usp=send_form">Sign Up! <span class="fa fa-external-link"></span></a>
 						</p>
