--- a/index.html
+++ b/index.html
@@ -27,6 +27,40 @@ http://bl.ocks.org/mbostock/3081153
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+    .ribbon {
+      font-size: 16px;
+      background-color: #a00;
+      overflow: hidden;
+      white-space: nowrap;
+      /* top left corner */
+      position: absolute;
+      left: -50px;
+      top: 40px;
+      /* 45 deg ccw rotation */
+      -webkit-transform: rotate(-45deg);
+         -moz-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
+           -o-transform: rotate(-45deg);
+              transform: rotate(-45deg);
+      /* shadow */
+      -webkit-box-shadow: 0 0 10px #888;
+         -moz-box-shadow: 0 0 10px #888;
+              box-shadow: 0 0 10px #888;
+    }
+    .ribbon a {
+      border: 1px solid #faa;
+      color: #fff;
+      display: block;
+      font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      margin: 1px 0;
+      padding: 10px 50px;
+      text-align: center;
+      text-decoration: none;
+      /* shadow */
+      text-shadow: 0 0 5px #444;
+    }
+</style>
 
 </head>
 
@@ -66,6 +100,9 @@ http://bl.ocks.org/mbostock/3081153
         </div>
 
     </nav> -->
+    <div class="ribbon">
+      <a href="/crash">2016 CS Crash Course</a>
+    </div>
 
 <div class="main">
 <svg class="intro-svg"></svg>
